# JKRiver

./: .dockerignore  .editorconfig  .gitignore  AGENT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_ja.md  README_zh.md  pyproject.toml  requirements.txt  settings.yaml  settings.yaml.default  web.py
agent/: api.py  channel_utils.py  core.py  discord_bot.py  main.py  proactive.py  schema.sql  sleep.py  task_agent.py  telegram_bot.py  withings_client.py
docker/: .env.example  README.md  build-and-push.sh  demo_en.json  docker-compose.override.yaml  docker-compose.yaml  gen_settings.py  start.sh
migrations/: 002_session_meta.sql  003_outsource_fields.sql  004_token_usage.sql  005_multi_owner.sql  006_owner_unique.sql  007_token_usage_owner.sql  008_drop_hypotheses.sql  009_industrial_tokens.sql  010_2fa_geoip.sql  011_pending_approval.sql  012_drop_2fa.sql
scripts/: start_local.py  system_info.py
templates/: _nav.html  base.html  chat.html  finance.html  health.html  invite.html  invite_waiting.html  outsource.html  profile.html  system.html  unlock.html
tests/: test_db.py  test_demo_pipeline.py  test_disputes.py  test_formatting.py  test_imports.py  test_maturity.py  test_outsource.py  test_parsing.py  test_perceive.py  test_profile_filter.py  test_session_memory.py  test_sleep_pipeline.py  test_storage.py  test_synonyms.py  test_think.py  test_trajectory.py  test_unit.py
web/: __init__.py  _helpers.py  auth.py  chat.py  core.py  finance.py  health.py  i18n.py  invite.py  observations.py  outsource.py  profile.py  (+3 more)
(+130 files in other folders)
